--- a/application/modules/default/views/scripts/product/partials/partialComment.phtml
+++ b/application/modules/default/views/scripts/product/partials/partialComment.phtml
@@ -57,7 +57,7 @@ $age = $helperHumanTiming->humanTiming($comment['comment_created_at']);
         <div class="comment-content">
             <div class="popover-content">
             	<?php 
-	              	require_once '/theme/flatui/js/lib/htmlpurifier-4.9.3-lite/library/HTMLPurifier.auto.php';
+	              	require_once APPLICATION_PATH.'../httpdocs/theme/flatui/js/lib/htmlpurifier-4.9.3-lite/library/HTMLPurifier.auto.php';
 		                	
 	              	$config = HTMLPurifier_Config::createDefault();
 	               	$purifier = new HTMLPurifier($config);
