--- a/application/modules/default/views/scripts/product/pling.phtml
+++ b/application/modules/default/views/scripts/product/pling.phtml
@@ -257,7 +257,7 @@ if ($this->product->claimable == 1) {
                         <div class="tab-pane" id="media-panel">
                             <?php if (null != ($this->product->embed_code)): ?>
                             <?php 
-				              	require_once '/theme/flatui/js/lib/htmlpurifier-4.9.3-lite/library/HTMLPurifier.auto.php';
+				              	require_once APPLICATION_PATH.'../httpdocs/theme/flatui/js/lib/htmlpurifier-4.9.3-lite/library/HTMLPurifier.auto.php';
 					                	
 				              	$config = HTMLPurifier_Config::createDefault();
 				               	$purifier = new HTMLPurifier($config);
