--- a/application/modules/default/views/scripts/user/activities.phtml
+++ b/application/modules/default/views/scripts/user/activities.phtml
@@ -57,7 +57,7 @@ $helpDate = new Default_View_Helper_PrintDate();
                         <div class="col-lg-12"> 
                             <span>
                             <?php 
-				              	require_once '/theme/flatui/js/lib/htmlpurifier-4.9.3-lite/library/HTMLPurifier.auto.php';
+				              	require_once APPLICATION_PATH.'../httpdocs/theme/flatui/js/lib/htmlpurifier-4.9.3-lite/library/HTMLPurifier.auto.php';
 					                	
 				              	$config = HTMLPurifier_Config::createDefault();
 				               	$purifier = new HTMLPurifier($config);
