--- a/application/modules/default/views/scripts/user/partials/loopMyProducts.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopMyProducts.phtml
@@ -54,7 +54,7 @@ $helperImage = new Default_View_Helper_Image();
         <!-- title -->
         <div class="title">
         	<?php 
-              	require_once APPLICATION_PATH.'../httpdocs/theme/flatui/js/lib/htmlpurifier-4.9.3-lite/library/HTMLPurifier.auto.php';
+              	require_once APPLICATION_PATH.'/../httpdocs/theme/flatui/js/lib/htmlpurifier-4.9.3-lite/library/HTMLPurifier.auto.php';
 	                	
               	$config = HTMLPurifier_Config::createDefault();
                	$purifier = new HTMLPurifier($config);
