--- a/application/modules/default/views/scripts/product/partials/productSupporterComments.phtml
+++ b/application/modules/default/views/scripts/product/partials/productSupporterComments.phtml
@@ -62,7 +62,7 @@ $helperImage = new Default_View_Helper_Image();
                         </div>
                         <div class="popover-content">
                         	<?php 
-				              	require_once APPLICATION_PATH.'../httpdocs/theme/flatui/js/lib/htmlpurifier-4.9.3-lite/library/HTMLPurifier.auto.php';
+				              	require_once APPLICATION_PATH.'/../httpdocs/theme/flatui/js/lib/htmlpurifier-4.9.3-lite/library/HTMLPurifier.auto.php';
 					                	
 				              	$config = HTMLPurifier_Config::createDefault();
 				               	$purifier = new HTMLPurifier($config);
