--- a/application/modules/default/views/scripts/user/partials/loopMyProducts.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopMyProducts.phtml
@@ -59,6 +59,7 @@ $helperImage = new Default_View_Helper_Image();
               	$config = HTMLPurifier_Config::createDefault();
                	$purifier = new HTMLPurifier($config);
               	$version = $purifier->purify($this->version);
+              	$description = $purifier->purify($object_text);
            	?>
             <h3><a href="<?= $helperBuildProductUrl->buildProductUrl($this->project_id) ?>"><?php echo $this->title; ?> <?php echo $version; ?></a><span  style="font-weight: normal; font-size: small; color: #4e4e4e"> added </span><span  style="font-weight: 700; font-size: small; color: #4e4e4e"><?= $addedOnText ?> ago</span><span style="font-weight: 700; font-size: small; float: right; color: #4e4e4e"> <?= $updatedOnText ?> ago</span><span style="font-weight: normal; font-size: small; float: right; color: #4e4e4e">updated&nbsp;</span></h3>
             
@@ -76,7 +77,7 @@ $helperImage = new Default_View_Helper_Image();
         <!-- /info -->
         <!-- text -->
         <div class="text">
-            <p><?= nl2br(strip_tags($object_text)) ?></p>
+            <p><?= nl2br(strip_tags($description)) ?></p>
         </div>
         <!-- /text -->
         <!-- buttons -->
