--- a/application/modules/default/views/scripts/user/partials/loopMyProducts.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopMyProducts.phtml
@@ -59,6 +59,7 @@ $helperImage = new Default_View_Helper_Image();
               	$config = HTMLPurifier_Config::createDefault();
                	$purifier = new HTMLPurifier($config);
               	$version = $purifier->purify($this->version);
+              	$versionTextOnly = strip_tags($version);
               	$description = $purifier->purify($object_text);
            	?>
             <h3><a href="<?= $helperBuildProductUrl->buildProductUrl($this->project_id) ?>"><?php echo $this->title; ?> <?php echo $version; ?></a><span  style="font-weight: normal; font-size: small; color: #4e4e4e"> added </span><span  style="font-weight: 700; font-size: small; color: #4e4e4e"><?= $addedOnText ?> ago</span><span style="font-weight: 700; font-size: small; float: right; color: #4e4e4e"> <?= $updatedOnText ?> ago</span><span style="font-weight: normal; font-size: small; float: right; color: #4e4e4e">updated&nbsp;</span></h3>
@@ -125,7 +126,7 @@ $helperImage = new Default_View_Helper_Image();
                    data-ppload-collection-id="<?= $this->ppload_collection_id ?>"
                    data-product-id="<?= $this->project_id ?>"
                    data-product-title="<?= $this->title ?>"
-                   data-product-version="<?= $version ?>"
+                   data-product-version="<?= $versionTextOnly ?>"
                    data-addpploadfile-uri="<?= $helperBuildProductUrl->buildProductUrl($this->project_id, 'addpploadfile') ?>"
                    data-updatepploadfile-uri="<?= $helperBuildProductUrl->buildProductUrl($this->project_id, 'updatepploadfile') ?>"
                    data-updatepackagetype-uri="<?= $helperBuildProductUrl->buildProductUrl($this->project_id, 'updatepackagetype') ?>"
