--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -2683,59 +2683,11 @@ span.page-views {
     .about-me-details {
       padding-left: 0;
       padding-right: .5em;
-    /*
-      ul.nav-tabs {
-        margin-bottom: 20px;
-
-        > li {
-
-          > a {
-            padding: 0.7em 1em;
-            font-size: 0.9em;
-            height: 2.95em;
-            color: @newblue;
-
-            span.glyphicon {
-              :before {
-                vertical-align: middle;
-              }
-            }
-
-            span.label.label-default {
-              padding: 0;
-              font-size: 75%;
-              vertical-align: super;
-              color: inherit;
-              background: none;
-            }
-
-            &:hover {
-              height: 2.85em;
-              color: lighten(@newblue, 5%);
-            }
-          }
-        }
-
-        > li.active {
-
-          > a {
-            color: darken(@newblue,5%);
-
-            &:hover {
-              height: 2.95em;
-            }
-          }
-        }
-
-        > li.w-label {
-
-          > a {
-            padding-right: 0.5em;
-          }
-        }
+      
+      .tab-content{
+        padding-top: 20px;
       }
-      */
-
+      
       h3.about-me-heading {
         font-size: 1.5em;
         margin: 0;
