--- a/application/modules/default/views/scripts/user/partials/loopMyComments.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopMyComments.phtml
@@ -26,10 +26,10 @@ $helperBuildProductUrl = new Default_View_Helper_BuildProductUrl();
 $helperFetchSubcategoriesForProduct = new Default_View_Helper_FetchCategoriesForProductAsString();
 $helperPrintDate = new Default_View_Helper_PrintDate();
 ?>
-<div class="tab-content" id="my-comments-tabs">
+<div  id="my-comments-tabs">
     <div id="my-comments-tabs-content">
     <small class="pull-right">
-        <div class="row rownomargin rownopadding pull-right"><?=$this->comments->getTotalItemCount()?> comments</div>
+        
         <?php
         if ($pageCount > 1) {
             echo $this->paginationControl($this->comments, 'Sliding', '/partials/paginationControlBootstrap.phtml', array('params' => array(), 'dom_target' => 'div#my-comments-tabs-content'));
