--- a/application/modules/default/views/scripts/user/aboutme.phtml
+++ b/application/modules/default/views/scripts/user/aboutme.phtml
@@ -48,8 +48,8 @@ $textCountryCity .= $this->member->country ? ', ' . $this->member->country : '';
                 <section class="header">
 
                     <!-- about me summary -->
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 summary" >
-                        <article class="well" style="width: 100%">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 summary" style=" padding-top:100px" >
+                        <article class="well" style="width: 100%;">
                             <div class="about-title">
                                 <figure class="relative inline profile-image-container">
                                     <img src="<?php echo $helperImage->Image($this->member->profile_image_url,array('width' => 110, 'height' => 110, 'crop' => 2)); ?>"
