--- a/application/modules/default/views/scripts/product/partials/productRating.phtml
+++ b/application/modules/default/views/scripts/product/partials/productRating.phtml
@@ -26,13 +26,17 @@
 	?>
 <div class="productRating-rows <?=$this->productRating['rating_active']==0?'productRating-rows-inactive':''?>">
 	<h3 class="product-heading product-update-heading" >
+	<a href="<?php echo $this->buildMemberUrl($this->productRating['member_id']); ?>">
 	<img class="userimg"  
 					src="<?= $this->Image($this->productRating['profile_image_url'],
 	                                                array('width' => 40, 'height' => 40)) ?>"
 	                                                 alt="product-maker" 
 	                                                />
+    </a>
 	<span>	
+		<a href="<?php echo $this->buildMemberUrl($this->productRating['member_id']); ?>">
 		<?=$this->productRating['username'] ?> 
+		</a>
 	</span>
 	  <span class="small light lightgrey product-update-date"> <?=$this->printDate($this->productRating['created_at']) ?> </span>
 	  <span > <?php 
