paypal valid status

--- a/application/modules/backend/views/scripts/user/index.phtml
+++ b/application/modules/backend/views/scripts/user/index.phtml
@@ -191,7 +191,7 @@
                 paypal_valid_status: {
                     title: 'paypal_valid_status',
                     width: '5%',
-                    options: {'': '', '100': '100 - Valid', '500': '500 - Invalid', '501': '501 - Can only receive money from homepage', '502': '502 - Can not receive personal payments', '503': '503 - This recipient is currently unable to receive money'},
+                    options: {'': '', '0': '0 - New', '100': '100 - Valid', '500': '500 - Invalid', '501': '501 - Can only receive money from homepage', '502': '502 - Can not receive personal payments', '503': '503 - This recipient is currently unable to receive money'},
                     optionsSorting: 'text',
                     list: true
                 },
