--- a/application/modules/default/views/scripts/product/partials/productRating.phtml
+++ b/application/modules/default/views/scripts/product/partials/productRating.phtml
@@ -39,12 +39,20 @@
 		</a>
 	</span>
 	  <span class="small light lightgrey product-update-date"> <?=$this->printDate($this->productRating['created_at']) ?> </span>
-	  <span > <?php 
-	  	if($this->productRating['user_like']==1 ){
-	  	     echo '<span class="glyphicon glyphicon-thumbs-up o-thumbs-up"> </span>';
-	  	} else{
-	  	     echo '<span class="glyphicon glyphicon-thumbs-down o-thumbs-down"> </span>';		
-	  	} 	
+	  <span> <?php 
+	  	
+	  	if($this->productRating['member_id']==0 ){
+	  	     // import from Hive sum vote
+	  	     if($this->productRating['user_like']>0) echo '<span class="glyphicon glyphicon-thumbs-up o-thumbs-up"> </span>'.$this->productRating['user_like'];
+	  	     if($this->productRating['user_dislike']>0) echo '<span class="glyphicon glyphicon-thumbs-up o-thumbs-down"> </span>'.$this->productRating['user_dislike'];
+	  	}else{
+	  		if($this->productRating['user_like']==1 ){
+	  		     echo '<span class="glyphicon glyphicon-thumbs-up o-thumbs-up"> </span>';
+	  		}else{
+	  		     echo '<span class="glyphicon glyphicon-thumbs-down o-thumbs-down"> </span>';		
+	  		} 	
+	  	}
+
 	  ?> </span>
 	</h3>
 	<span style="padding-left: 45px">	
